--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ a {
     display: block;
 }
 
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -51,9 +52,9 @@ a {
 }
 
 .header-container {
-    display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .link-logo {
@@ -66,9 +67,7 @@ a {
         text-transform: uppercase;
         text-decoration: none;
         margin-right: 76px;
-        padding-top: 24px;
-        padding-bottom: 24px;
-        align-items: center;
+        
 
 }
 .logo-studio {
@@ -110,12 +109,17 @@ padding-top: 24px;
 
 }
 
+.address-section {
+    display: block;
+}
+
+
+
 .address-list {
     display: flex;
     gap: 40px;
     margin-left: 332px;
-    padding-top: 24px;
-        padding-bottom: 24px;
+       
 }
 
 .nav-item:hover {
@@ -137,6 +141,9 @@ padding-top: 24px;
         font-style: normal;
         letter-spacing: 0.32px;
         text-decoration: none;
+        display: block;
+            padding-top: 24px;
+            padding-bottom: 24px;
 }
 .head-address-item:hover {
     color:  #404BBF;
@@ -152,16 +159,8 @@ color: #404BBF;
 }
 /* hero section */
 
-.hero-container {
-    flex-direction: column;
-        gap: 40px;
-        display: flex;
-        margin: 0 auto;
-}
-
 .hero-section {
     background: #2E2F42;
-    
         padding: 188px 0;
 }
 .hero-title {
@@ -171,11 +170,11 @@ color: #404BBF;
         font-weight: 700;
         line-height: 1.07;
         letter-spacing: 1.12px;
-        max-width: 496px;
-        margin-left: auto;
-       margin-right: auto;
-       text-align: center;
-       margin-bottom: 48px;
+        display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 50px;
+            max-width: 496px;
 }
 .hero-button {
     background:  #4D5AE5;
@@ -186,13 +185,14 @@ color: #404BBF;
             line-height: 1.5;
             letter-spacing: 0.04em;
             cursor: pointer;
-            display: block;
-            padding: 16px 32px;
             border-radius: 4px;
-            min-width: 169px;
-            height: 56px;
-            border: none;
-            margin: auto;
+                padding: 16px 32px;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                border: none;
+                min-width: 169px;
+                height: 56px;
 }
 .hero-button:hover {
         background:  #404BBF;
@@ -204,7 +204,6 @@ color: #404BBF;
 /* section 2 */
 
 .descript-section {
-   
     padding: 120px 0;
 }
 
@@ -223,8 +222,7 @@ color: #404BBF;
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.4px;
-        display: flex;
-        column-gap: 24px;
+        
         margin-bottom: 8px;
 }
 .section-text {
