--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,12 @@ a {
     display: block;
 }
 
+.container {
+    max-width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+    justify-content: space-between;
+}
 
 .visually-hidden {
     position: absolute;
@@ -44,17 +50,20 @@ a {
 }
 /* header section */
 
-.container {
-    max-width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
-        justify-content: space-between;
+.header-section {
+    border-bottom: 1px solid #E7E9FC;
+    background: #FFF;
 }
 
 .header-container {
 display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.nav-section {
+    display: flex;
+    align-items: center;
 }
 
 .link-logo {
@@ -70,6 +79,7 @@ display: flex;
         
 
 }
+
 .logo-studio {
     color:  #2E2F42;
         font-family: Raleway,sans-serif;
@@ -81,12 +91,15 @@ font-weight: 700;
         text-decoration: none;
 }
 
+.header-list {
+    display: flex;
+    gap: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 
-
-.header-section {
-    border-bottom: 1px solid #E7E9FC;
-        background: #FFF;
 }
+
+
 
 .nav-item {
     color:  #2E2F42;
@@ -97,18 +110,22 @@ font-weight: 700;
         padding: 24px 0
 }
 
-.nav-section {
-        display: flex;
-        align-items: center;
+
+.nav-item:focus {
+    color: #404BBF;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+}
+.nav-item:hover {
+    color: #404BBF;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
 }
 
-.header-list {
-display: flex;
-gap: 40px;
-padding-top: 24px;
-    padding-bottom: 24px;
+/* address */
 
-}
 
 .address-section {
     display: block;
@@ -118,21 +135,10 @@ padding-top: 24px;
 .address-list {
     display: flex;
     gap: 40px;
+    align-items: center;
+    padding: 24px 0;
     margin-left: 332px;
        
-}
-
-.nav-item:hover {
-    color: #404BBF;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.32px;
-}
-.nav-item:focus {
-    color: #404BBF;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.32px;
 }
 
 .head-address-item {
@@ -145,6 +151,7 @@ padding-top: 24px;
             padding-top: 24px;
             padding-bottom: 24px;
 }
+
 .head-address-item:hover {
     color:  #404BBF;
         line-height: 1.5;
@@ -157,12 +164,15 @@ color: #404BBF;
     font-style: normal;
     letter-spacing: 0.32px;
 }
+
+
 /* hero section */
 
 .hero-section {
     background: #2E2F42;
         padding: 188px 0;
 }
+
 .hero-title {
     color:  #FFF;
         text-align: center;
@@ -176,6 +186,7 @@ color: #404BBF;
             margin-bottom: 50px;
             max-width: 496px;
 }
+
 .hero-button {
     background:  #4D5AE5;
         color: #FFF;
@@ -194,6 +205,7 @@ color: #404BBF;
                 min-width: 169px;
                 height: 56px;
 }
+
 .hero-button:hover {
         background:  #404BBF;
 }
@@ -231,11 +243,9 @@ color: #404BBF;
         letter-spacing: 0.32px;
 }
 
-/* section 3 */
+/* team */
 
-.img {
-    display: block;
-}
+
 
 .team-section {
     background: #F4F4FD;
@@ -256,7 +266,6 @@ color: #404BBF;
         text-transform: capitalize;
         text-align: center;
         margin-bottom: 72px;
-    
 }
 
 .team {
@@ -268,6 +277,7 @@ color: #404BBF;
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
 }
+
 .team-list {
     color: #2E2F42;
         font-size: 20px;
@@ -318,6 +328,12 @@ color: #404BBF;
             row-gap: 48px;
 }
 
+.portfolio-container {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+
 .portfolio-title {
     color:  #2E2F42;
         font-size: 20px;
@@ -325,12 +341,6 @@ color: #404BBF;
         line-height: 1.2;
         letter-spacing: 0.4px;
             margin-bottom: 8px;
-}
-
-.portfolio-container {
-        padding: 32px 16px;
-            border: 1px solid #e7e9fc;
-            border-top: none;
 }
 
 .describe-portfolio {
@@ -345,6 +355,7 @@ color: #404BBF;
     background: #2E2F42;
         padding: 100px 0;
 }
+
 .footer-link-logo {
     color:  #4D5AE5;
         font-family: Raleway,sans-serif;
@@ -357,6 +368,7 @@ color: #404BBF;
             display: inline-block;
                 margin-bottom: 16px;
 }
+
 .footer-logo-studio {
     color: #F4F4FD;
         font-family: Raleway,sans-serif;
@@ -367,6 +379,7 @@ color: #404BBF;
         text-transform: uppercase;
         text-decoration: none;
 }
+
 .footer-text {
     color: #F4F4FD;
         line-height: 1.5;
